--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,123 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+@keyframes arrowAnimation {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(-4px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.theme-menu__button:disabled::before {
+    animation: arrowAnimation 0.5s ease-in-out infinite alternate;
+}
+
+.card__like-button::before,
+.footer-button::before,
+.dialog-button::before {
+    z-index: 0;
+    content: "";
+    background-color: var(--accent-color);
+    position: absolute;
+    left: -100%;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.5s ease-in-out;
+    pointer-events: none;
+}
+
+.card__like-button:hover::before,
+.footer-button:hover::before,
+.dialog-button:hover::before {
+    transform: translateX(100%);
+}
+
+@keyframes heartbeat {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes sparksAnimation {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.heart {
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.heart:hover .main-body {
+    fill: var(--accent-color);
+    transition: fill 0.3s ease-in-out;
+}
+
+.like-icon:hover .core {
+    fill: var(--accent-color);
+    transition: fill 0.3s ease-in-out;
+    transition-delay: 0.03s;
+}
+
+.like-icon.is-liked .core {
+    fill: #FF0000;
+    transition: fill 0.3s ease-in-out;
+}
+
+.like-icon.is-liked .main-body {
+    fill: #FF0000;
+    transition: fill 0.3s ease-in-out 0.06s;
+}
+
+.like-icon.is-liked .contour {
+    fill: #FF0000;
+    transition: fill 0.03s ease-in-out 0.12s;
+}
+
+.like-icon.is-liked .sparks {
+    fill: #FF0000;
+    opacity: 0;
+    animation: sparksAnimation 0.3s ease-in-out 0.3s both;
+}
+
+.like-icon:not(.is-liked) .contour {
+    fill: var(--accent-color);
+    transition: fill 0.03s linear;
+}
+
+.like-icon.is-liked {
+    animation: heartbeat 0.3s ease-in-out 0.1s both;
+}
+
+.like-icon:active .main-body {
+    fill: #FF0000;
+    transition: fill 0.3s ease-in-out;
+}
+
+.like-icon:active .core {
+    fill: #FF0000;
+    transition: fill 0.3s ease-in-out;
+    transition-delay: 0.03s;
+}
+
+.like-icon:active .contour {
+    fill: #FF0000;
+    transition: fill 0.03s ease-in-out;
+}
