--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,31 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-dark {
+    --background-color: #000000;
+    --accent-color: #00CC14;
+    --background-gradient: repeating-linear-gradient(to right, #000 0, #000 2px, transparent 2px, transparent 4px),
+    repeating-linear-gradient(to bottom, #000 0, #000 2px, transparent 2px, transparent 4px),
+    linear-gradient(to bottom, #007f0c 0%, #004306 100%); /* Сетка и переход цвета сверху вниз (тёмная тема) */
+}
+
+/*  СВЕТЛАЯ */
+:root.theme-light {
+    --background-color: #ffffff;
+    --accent-color: #000000;
+    --background-gradient: repeating-linear-gradient(to right, #d3d3d3 0, #d3d3d3 2px, transparent 2px, transparent 4px),
+    repeating-linear-gradient(to bottom, #d3d3d3 0, #d3d3d3 2px, transparent 2px, transparent 4px),
+    linear-gradient(to bottom, #e7e7e7 0%, #1a1a1a 100%);
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --background-color: #000000;
+        --accent-color: #00CC14;
+        --background-gradient: repeating-linear-gradient(to right, #000 0, #000 2px, transparent 2px, transparent 4px),
+        repeating-linear-gradient(to bottom, #000 0, #000 2px, transparent 2px, transparent 4px),
+        linear-gradient(to bottom, #007f0c 0%, #004306 100%);
+    }
+
+}
