--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 98px;
+  gap: 100px;
   min-inline-size: 320px;
   font-family: var(--main-font), sans-serif;
   font-variation-settings:  'wght' 400;
@@ -42,8 +42,8 @@ button {
 .header__theme-menu {
   display: flex;
   flex-direction: column;
-  margin-block-start: 99px;
-  padding-block-start: clamp(110px, 19.5%, 137px);
+  margin-block-start: 100px;
+  padding-block-start: clamp(120px, 19.5%, 137px);
   background-color: var(--background-color);
   align-items: center;
   justify-content: center;
@@ -61,9 +61,10 @@ button {
 
 .header_heading {
   font-family: var(--accent-font), fantasy;
-  font-size: clamp(0.875rem, calc(0.2329rem + 1.8692vw), 1.4375rem);
+  font-size: clamp(49px, calc(0.2329rem + 1.8692vw), 1.4375rem);
   font-weight: 400;
   line-height: 23px;
+  height: 23px;
   padding-block-start: clamp(8px, 2vw, 20px);
   text-transform: uppercase;
 }
@@ -76,27 +77,33 @@ button {
   border: none;
   position: relative;
   text-transform: uppercase;
+  padding: 0;
 }
 
 .theme-menu__button:disabled::before {
   content: '▶';
   pointer-events: none;
   position: absolute;
-  left: -13px;
-  bottom: 13px;
+  left: -15px;
+  bottom: 12px;
 }
 
 .theme-menu__list {
-  gap: 8px;
-  padding-block-start: 25px;
+  gap: 14px;
+  margin-block-start: 25px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   flex-wrap: wrap;
   justify-content: space-around;
   align-content: center;
-  margin-inline-start: 18px;
+  margin-inline-start: 21px;
   margin-block-end: 25px;
+  line-height: 14px;
+}
+
+.theme-menu__item {
+  height: 14px;
 }
 
 /*Стилизация карточек*/
@@ -106,7 +113,7 @@ button {
   flex-direction: column;
   align-items: center;
   margin-inline: auto;
-  gap: 48px;
+  gap: 50px;
   width: clamp(375px, calc(60% + 4px), calc(696px + 4px));
 }
 
@@ -116,22 +123,24 @@ button {
   border: 2px solid var(--accent-color);
   display: flex;
   flex-direction: column;
-  padding-block-end: 25px;
 }
 
 .main_description-title {
   font-family: var(--main-font), sans-serif;
   font-variation-settings:  'wght' 700;
   font-size: 18px;
+  padding: 5px;
   padding-inline-start: 10px;
   padding-inline-end: 10px;
-  padding-block: 7px;
+  min-height: 33px;
+  display: flex;
+  align-items: center;
+  border-bottom: 2px solid var(--accent-color);
 }
 
 /*Стилизация изображения*/
 .main_description-image {
   width: 100%;
-  outline: 2px solid var(--accent-color);
   aspect-ratio: 1/1;
   object-fit: cover;
 }
@@ -140,9 +149,10 @@ button {
 
 .card_content {
   font-family: var(--main-font), sans-serif;
-  margin: 27px;
+  margin: 25px;
   display: flex;
   flex-direction: column;
+  line-height: 21px;
   gap: 27px;
   font-variation-settings:  'wght' 400;
   font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
@@ -163,7 +173,6 @@ button {
 .label-wrapper {
   position: relative;
   width: 100%;
-  overflow: hidden;
   box-sizing: border-box;
   outline: 2px solid var(--accent-color);
 }
@@ -173,8 +182,8 @@ button {
   flex-direction: row;
   justify-content: flex-end;
   position: absolute;
-  top: 25px;
-  right: 15px;
+  top: 27px;
+  right: 25px;
   font-family: var(--accent-font), fantasy;
   font-size: 14px;
   color: var(--accent-color);
@@ -202,7 +211,7 @@ button {
   text-align: center;
   background-color: var(--background-color);
   margin-block-end: 100px;
-  margin-block-start: 53px;
+  margin-block-start: 52px;
   margin-inline: auto;
   display: flex;
   flex-wrap: wrap;
@@ -269,7 +278,8 @@ button {
 }
 
 .card__icon-button:focus-visible {
-  outline: 2px solid var(--accent-color);
+  border: 2px solid var(--accent-color);
+  outline: none;
 }
 
 /* Текст, который перекрашивается постепенно */
@@ -285,6 +295,7 @@ button {
   color: var(--accent-color);
   transition: color 0.5s ease-in-out;
   z-index: 1;
+  line-height: 12.6px;
 }
 
 .footer-button:hover .button__text,
@@ -317,13 +328,17 @@ button {
 
 .card__icon-button {
   background: transparent;
+  border: 0;
+  padding: 0;
+  margin-right: 3px;
   border: 2px solid transparent;
-  margin-block-end: 20px;
 }
 
 .card__button {
   display: flex;
   justify-content: flex-end;
+  margin-block-end: 25px;
+  height: 38px;
 }
 
 /* Dialog */
@@ -436,13 +451,32 @@ dialog[open] {
 
 /* медиазапрос */
 @media (width <= 375px) {
+  .card_list-main{
+    gap: 51.5px;
+  }
 
   .header_heading {
-    padding-block-start: clamp(0px, 2vw, 20px);
+    margin-block-start: clamp(0px, 20px, 20px);
+    line-height: 14px;
+    height: 14px;
+  }
+
+  .header-logo{
+    line-height: 49px;
+  }
+
+  .label{
+    right: 11px;
+    top: 20px;
+  }
+
+  .label-wrapper{
+    outline: 2px solid var(--accent-color);
+    border: none;
   }
 
   .footer-button {
-    padding-block: 15px;
+    padding: 15px 20px;
     height: auto;
     width: clamp(310px, calc(23.3vw + 4px), calc(25% + 4px));
   }
@@ -458,6 +492,14 @@ dialog[open] {
   #dialog-id {
     padding-block: 30px;
     padding-inline: 39px;
+  }
+
+  .main_description-title{
+    line-height: 21.78px;
+  }
+
+  .preparation-img{
+    display: flex;
   }
 
 }
